# finder

./: .gitignore  CMakeLists.txt  Index.cpp  Index.h  Trigrammer.cpp  Trigrammer.h  TrigramsHolder.cpp  TrigramsHolder.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  pf.h  stupid_finder.cpp  stupid_finder.h
